--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="categoria">Categoria</string>
+    <string name="idAlta">ID</string>
+    <string name="nombre_prod">Nombre Producto</string>
+    <string name="stock">Stock</string>
+    <string name="agregar">Agregar</string>
+    <string name="ingreseunproducto">Ingrese un nuevo producto</string>
 </resources>
