--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="nombre_prod">Nombre Producto</string>
     <string name="stock">Stock</string>
     <string name="agregar">Agregar</string>
+    <string name="modificar">Modificar</string>
+    <string name="buscar">Buscar</string>
     <string name="ingreseunproducto">Ingrese un nuevo producto</string>
 </resources>
