--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="modificar">Modificar</string>
     <string name="buscar">Buscar</string>
     <string name="ingreseunproducto">Ingrese un nuevo producto</string>
+    <string name="idBuscado">_____</string>
 </resources>
